<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    tools:context=".ui.home.categoriesfragement.CategoriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:padding="15dp"
            android:text="@string/pick_your_category_of_interest"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/sports"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/sportsshape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="sports"
            app:layout_constraintBottom_toTopOf="@+id/health"
            app:layout_constraintEnd_toStartOf="@+id/politics"
            app:layout_constraintHeight_percent="0.27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sports" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sports"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/politics"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/politicsshape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="general"
            app:layout_constraintBottom_toTopOf="@+id/bussiness"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sports"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/politics" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/politics"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/health"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/healthshape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="health"
            app:layout_constraintBottom_toTopOf="@+id/enviroment"
            app:layout_constraintEnd_toStartOf="@+id/bussiness"
            app:layout_constraintHeight_percent="0.27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sports"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/health" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/health"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bussiness"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/bussinessshape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="business"
            app:layout_constraintBottom_toTopOf="@+id/science"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/health"
            app:layout_constraintTop_toBottomOf="@+id/politics"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bussines" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/business"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/enviroment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/enviromentshape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="technology"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/science"
            app:layout_constraintHeight_percent="0.27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/environment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enviroment"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/science"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/scienceshape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="science"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enviroment"
            app:layout_constraintTop_toBottomOf="@+id/bussiness"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/science" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/science"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
